tests/neg/wildcard-imports/Test.scala
package test

import A.*
import B.*

object Test:
  val bar = foo // error

